Fix header overflow issue on mobile

--- a/styles/global-text.css
+++ b/styles/global-text.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
 
 @font-face {
   font-family: 'Roboto';
